--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,47 @@
-@import './base.css';
+:root{
+  --primario: #0d0d0d;
+  --letra: #fff;
+
+  /* https://www.color-hex.com/color-palette/16812 */
+}
+
+html{
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
+
+*, *::before, *::after{
+  box-sizing: inherit;
+}
+
+body{
+  background-color: var(--primario);
+  margin: 0;
+}
+
+.no-margin{
+  margin: 0;
+}
+
+.no-padding{
+  padding: 0;
+}
+
+.flex{
+  display: flex;
+}
+
+h1{
+  font-size: 3.5rem;
+}
 
 #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
 
+  color: var(--letra);
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
   font-weight: normal;
-}
-
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
 }
